2025-08-08 CTZ: Se sube avance cotizador.

--- a/CódigoFuente/BitacorasProduccion/Views/CTZ_Catalogs/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/CTZ_Catalogs/Index.cshtml
@@ -88,7 +88,7 @@
                                     }
                                 }
                                 <a href="@hrefEd1" class="@btnClassEd1" @Html.Raw(extraEd1)>
-                                    <i class="fa fa-wrench"></i> Engineering Dimension
+                                    <i class="fa fa-wrench"></i> Engineering Dimension / Theoretical Line
                                 </a>
 
                                 @* Strokes per Minute *@
