2025-08-12 BG: Se agrega carga de excel a budget.

--- a/CódigoFuente/BitacorasProduccion/Views/BG_Forecast_reporte/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/BG_Forecast_reporte/Index.cshtml
@@ -97,6 +97,10 @@
                                                 <i class="fa-solid fa-file-arrow-down"></i>
                                                 Descargar plantilla de carga
                                             </a>
+                                            <a href="@Url.Action("GestionarCargas", "BG_Forecast_reporte")" class="btn btn-primary" style="background-color: #00487c; border-color: #00487c;">
+                                                <i class="fa-solid fa-file-excel"></i>
+                                                Gestionar Cargas Excel
+                                            </a>
                                             <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                 <i class="fa-solid fa-database"></i> Catálogos
                                             </button>
