--- a/CódigoFuente/BitacorasProduccion/Views/BG_Forecast_reporte/GenerarReporte.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/BG_Forecast_reporte/GenerarReporte.cshtml
@@ -131,6 +131,7 @@
                             }
 
                             @Html.HiddenFor(model => model.id_reporte)
+                            @Html.HiddenFor(model => model.nombreReporte)
 
                             <div class="item form-group row">
                                 <div class="col-md-4">
